completata iterazione3