@@ -9,24 +9,52 @@ import java.util.List;
  */
 public abstract class Target {
 
-    private String id;
+    
+	private String id;
+    private String displayName;
 
-    public Target(String id) {
-        if (id == null || id.trim().isEmpty()) {
+    public Target(String id, String displayName) {
+        if (id == null || displayName == null || id.isBlank() || displayName.isBlank()) {
+            throw new IllegalArgumentException("L'ID del target non può essere nullo");
+        }
+        this.id = id;
+        this.displayName = displayName;
+    }
+
+    protected Target(String id) {
+        if (id == null || id.isBlank()) {
             throw new IllegalArgumentException("L'ID del target non può essere nullo");
         }
         this.id = id;
     }
-
+    
+    
+    
     public String getId() {
         return id;
     }
     
-    
-    /**
+    public String getDisplayName() {
+		return displayName;
+	}
+	public void setDisplayName(String nome) {
+		this.displayName = nome;
+	}
+	
+	@Override
+	public String toString() {
+		return "" + displayName + "";
+	}
+
+	/**
      * Ritorna la lista dei dispositivi fisici all'interno di un gruppo.
      * (Compresi quelli dentro i gruppi interni).
      */
     public abstract List<Dispositivo> getDispositivi();
-    public abstract List<Dispositivo> getDispositiviCompatibili(Comando c);
+    /**
+     * Ritorna la lista dei dispositivi compatibili al comando c
+     * all'interno di un gruppo.
+     * (Compresi quelli dentro i gruppi interni).
+     */
+    public abstract List<Dispositivo> getDispositiviCompatibili(ComandoSingolo c);
 }
